Fix header css grid gap

--- a/ui/src/styles/CalendarHeader.scss
+++ b/ui/src/styles/CalendarHeader.scss
@@ -2,7 +2,7 @@
 
 .calendar-header {
   display: grid;
-  grid-gap: 2px;
+  grid-gap: 1px;
   background-color: $charcol;
   grid-template-columns: 26% repeat(12, 1fr);
   grid-template-rows: 50px 30px;
